<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for a single list item in the list of products -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="7"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:text="@string/item_name"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/item_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#201f1f"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/order"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            app:srcCompat ="@drawable/ic_local_grocery_store_24dp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/item_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#000000" />

    </RelativeLayout>

</LinearLayout>